--- a/package.json
+++ b/package.json
@@ -14,10 +14,30 @@
 	],
 	"main": "./out/extension.js",
 	"contributes": {
-		"commands": [{
-			"command": "extension.helloWorld",
-			"title": "Hello World"
-		}]
+		"commands": [
+			{
+				"command": "extension.helloWorld",
+				"title": "Hello World"
+			}
+		],
+		"viewsContainers": {
+            "activitybar": [
+                {
+                    "id": "chat-explorer",
+                    "title": "TEAMS CHAT",
+                    "icon": "resources/teams.svg"
+                }
+            ]
+        },
+        "views": {
+            "chat-explorer": [
+                {
+                    "id": "chat_authors",
+					"name": "AUTHORS",
+					"when": "askItExtensionActivated"
+                }
+            ]
+        }
 	},
 	"scripts": {
 		"vscode:prepublish": "yarn run compile",
@@ -35,6 +55,7 @@
 		"mocha": "^6.1.4",
 		"typescript": "^3.3.1",
 		"tslint": "^5.12.1",
-		"vscode-test": "^1.0.0-next.0"
+		"vscode-test": "^1.0.0-next.0",
+		"inversify": "^4.11.1"
 	}
 }
