--- a/app/package.json
+++ b/app/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@msteams/data-apollo-chat": "^2.0.3194035",
+    "@msteams/services-chat": "^3.0.3194035",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1"
