--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
 				{
 					"id": "chat-explorer",
 					"title": "TEAMS CHAT",
-					"icon": "resources/teams.svg"
+					"icon": "resources/MS_Teams.svg"
 				}
 			]
 		},
