--- a/app/package.json
+++ b/app/package.json
@@ -4,7 +4,15 @@
   "private": true,
   "dependencies": {
     "@msteams/data-apollo-chat": "^2.0.3194035",
+    "@msteams/data-schema": "^1.64.3194035",
+    "@msteams/services-auth": "^2.0.3194035",
     "@msteams/services-chat": "^3.0.3194035",
+    "@msteams/services-core-common": "^2.0.3194035",
+    "@msteams/services-settings": "^2.1.3194035",
+    "@msteams/services-telemetry": "^3.0.3194035",
+    "@msteams/services-transport": "^2.0.3194035",
+    "@stardust-ui/react": "^0.34.2",
+    "history": "^4.9.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1"
