--- a/package.json
+++ b/package.json
@@ -69,14 +69,15 @@
 		"@types/mocha": "^5.2.6",
 		"@types/node": "^10.12.21",
 		"@types/vscode": "^1.36.0",
+		"git-blame": "^0.1.1",
 		"glob": "^7.1.4",
 		"mocha": "^6.1.4",
-		"typescript": "^3.3.1",
-		"tslint": "^5.12.1",
-		"vscode-test": "^1.0.0-next.0",
-		"git-blame": "^0.1.1",
 		"moment": "^2.10.6",
 		"path": "^0.12.7",
-		"vscode": "0.11.x"
+		"ts-dedent": "^1.0.0",
+		"tslint": "^5.12.1",
+		"typescript": "^3.3.1",
+		"vscode": "0.11.x",
+		"vscode-test": "^1.0.0-next.0"
 	}
 }
