--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
 		"tslint": "^5.12.1",
 		"typescript": "^3.3.1",
 		"vscode": "0.11.x",
-		"vscode-test": "^1.0.0-next.0"
+		"vscode-test": "^1.0.0-next.0",
+		"simple-git": "^1.122.0"
 	}
 }
